# dhdt

./: .gitignore  .readthedocs.yml  .zenodo.json  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  NOTICE  README.rst  RGIrasterization4S2.py  S2shadowExtract.py  environment.yml  matching_tools.py  project_setup.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  cffconvert.yml  draft-pdf.yml  pypi.yml
dhdt/: __init__.py
dhdt/auxilary/: handler_coastal.py  handler_cop.py  handler_copernicusdem.py  handler_era5.py  handler_google_cloud.py  handler_mgrs.py  handler_randolph.py  handler_rgi.py
dhdt/auxiliary/: handler_coastal.py  handler_copernicusdem.py  handler_era5.py  handler_google_cloud.py  handler_mgrs.py  handler_randolph.py
dhdt/generic/: attitude_tools.py  data_tools.py  debugging.py  filtering_statistical.py  geometry_tools.py  gis_tools.py  handler_aster.py  handler_cop.py  handler_dat.py  handler_im.py  handler_landsat.py  handler_mgrs.py  handler_rapideye.py  handler_sentinel2.py  handler_stac.py  handler_venus.py  handler_www.py  handler_xml.py  mapping_io.py  mapping_tools.py  orbit_tools.py  terrain_tools.py  test_tools.py  unit_check.py  unit_conversion.py
dhdt/input/: read_aster.py  read_era5.py  read_hyperion.py  read_landsat.py  (+7 more)
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat  modules.rst  requirements.txt  theory.rst  tutorials.rst
eratosthenes/: S2shadowExtract.py  __version__.py
examples/: 02bis-generate_tile_copDEM.py  07bis-bbox-from-rgi-id.py  08bis-make-casting-plots.py  08tri-make-casting-plots.py  09bis-ICEsat-2-plot.py  10bis-make-header-plots.py  11bis-match-shadow-cast.py  12bis-landsat.py  13bis-improve-labelling.py  14bis-make-map.py  15bis-coregister-2.py  15penta-coregister.py  15quad-scatter-plot.py  15tri-coregister.py  16bis good shadow transform.py  17-local-download-of-S2.py  18-shadow-classification.py  18bis-shadow-class-spot.py  19-classify-other-scenes.py  20-make-S2-subsets.py  21-make-shadow-and-coregister.py  22-match-shadow-pair.py  23-match-velo.py  24-group-coregistration.py  25-full-scene-coreg.py  26-SAR.py  27-combine-conn.py  28-test-artificial.py  30-refraction.py  30b-refraction.py  31-refraction-broadband.py  32-steady-state.py  33-combo-conn-pd.py  33b-combo-conn-pd-coreg.py  34-shadow-scene-matching.py  35-refine-casted-location.py  36-plotting-subscene.py  40-bologna-hypso.py  666_stMaartenStack.py  667kaikoura.py  (+26 more)
paper/: paper.bib  paper.md
tests/: test_eratosthenes.py  test_lint.py
(+211 files in other folders)
